# notion-scholar

./: .gitignore  .pre-commit-config.yaml  README.md  pdf_bibtex_checker.py  requirements.txt  setup.cfg
notion_scholar/: __main__.py  bibtex.py  config.py  download.py  main.py  notion_api.py  publication.py  run.py  utilities.py
resources/: sample.bib
ressources/: sample.bib
