[metadata]
name = notion-scholar
version = 0.0.0
description = Reference management solution using Python and Notion.
author = Thomas Hirtz
author_email = thomashirtz@pm.me

[options]
packages = find:
install_requires =
    keyring
    setuptools
    bibtexparser
    platformdirs
    notion-client

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    ns = notion_scholar.__main__:main
    notion-scholar = notion_scholar.__main__:main