[metadata]
name = notion_scholar
version = 0.0.0
description = Reference management solution using Python and Notion.
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas Hirtz
author_email = thomashirtz@pm.me
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
install_requires =
    bibtexparser
    keyring
    notion-client
    platformdirs
    setuptools

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    ns = notion_scholar.__main__:main
    notion-scholar = notion_scholar.__main__:main
